# aiohttp-with-di-example

./: .envexample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: settings.py
src/business_logic/dto/: post.py  posts.py
src/business_logic/services/: post.py
src/di/: __init__.py  containers.py  factories.py
src/infrastructure/db/: base.py  client.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 30c1d74afa6c_initial_migrate.py
src/infrastructure/db/models/: post.py  posts.py
src/presentation/api/: __init__.py  app.py
src/presentation/api/controllers/: __init__.py  post.py
src/presentation/api/controllers/responses/: post.py
src/presentation/api/handlers/: __init__.py  post.py  posts.py
src/presentation/api/handlers/requests/: posts.py
src/presentation/api/handlers/responses/: posts.py
