[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terehove@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiohttp-apispec = "^2.2.3"
sqlalchemy = "^2.0.3"
sqlalchemy2-stubs = "^0.0.2a32"
alembic = "^1.9.3"
envdataclass = "^0.4"
rodi = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
